fix activity stream image's alignment issue

--- a/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
@@ -4773,3 +4773,9 @@ div.v-button-link.buttonPagingcurrent,div.v-button-link.buttonPaging:hover
 	box-sizing: border-box;
 	border-bottom: 1px solid rgb(169, 169, 169);
 }
+
+/* Activity Stream Image's alignment fix */
+.stream-wrapper .v-label img {
+	display: inline-block;
+	vertical-align: bottom;
+}
